--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GeoQuizApp</string>
+    <string name="question_text">Is there more than a million people in Indonesia?</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
 </resources>
