--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
         Мантию-невидимку Гарии подарил "Альбус Дамблдор"?
     </string>
 
+    <string name="arrow_back_description">Back question</string>
+    <string name="arrow_next_description">Back question</string>
+
 </resources>
