--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     </string>
 
     <string name="arrow_back_description">Back question</string>
-    <string name="arrow_next_description">Back question</string>
+    <string name="arrow_next_description">Next question</string>
 
 </resources>
