--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="incorrect_toast">Не верно!</string>
     <string name="final_message">Поздравляю! Вы прошли этот тест!\nВаш результат</string>
     <string name="final_title">Тест завершен!</string>
+    <string name="wrong_text">Вы уверены что хотите сделать это?</string>
+    <string name="show_answer_button">Подсмотреть ответ</string>
+    <string name="cheat_button">Сжульничать</string>
+    <string name="judgment_wrong">Жульничать не хорошо!</string>
 
     <string name="question_daddy_potter">Папу Гарри Поттера звали "Сириус Блэк"?</string>
     <string name="question_volan_de_mort">
