--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,15 @@
     <string name="false_button">Нет</string>
     <string name="correct_toast">Верно!</string>
     <string name="incorrect_toast">Не верно!</string>
-    <string name="final_message">Поздравляю! Вы прошли этот тест!\nВаш результат</string>
+    <string name="final_message">Поздравляю! Вы прошли этот тест!\nВы верно ответили на</string>
+    <string name="question_text">вопроса(ов)</string>
     <string name="final_title">Тест завершен!</string>
     <string name="wrong_text">Вы уверены что хотите сделать это?</string>
     <string name="show_answer_button">Подсмотреть ответ</string>
     <string name="cheat_button">Сжульничать</string>
     <string name="judgment_wrong">Жульничать не хорошо!</string>
+    <string name="cheat_message">Вы сжульничали</string>
+    <string name="cheat_text">раз(а)</string>
 
     <string name="question_daddy_potter">Папу Гарри Поттера звали "Сириус Блэк"?</string>
     <string name="question_volan_de_mort">
