--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="cheat_message">Вы сжульничали</string>
     <string name="cheat_text">раз(а)</string>
     <string name="api_level_text">API Level: %1$d</string>
+    <string name="number_attempts_text">Сжульничать осталось %1$d раз(а)</string>
 
     <string name="question_daddy_potter">Папу Гарри Поттера звали "Сириус Блэк"?</string>
     <string name="question_volan_de_mort">
